--- a/website/blog/2020-10-02-blog-post.md
+++ b/website/blog/2020-10-02-blog-post.md
@@ -9,20 +9,27 @@ What is GHC ?
 ---
 The [Grace Hopper Conference](https://ghc.anitab.org/) is an annual conference, and _the world's largest gathering of women in computing_
 
-In 2019, the live conference in Orlando Florida had 26,000 attendees. The conference has many features, including workshops, networking, mentorship, poster presentations, speakers from academic, government, and industry. The live conference has a massive Career Fair where recruiters and engineers amass from companies such as Apple, Facebook, Amazon, Google, JP Morgan, Morgan Stanley, Goldman Sachs, Slack, Home Depot, Microsoft, Salesforce, Stripe, Quora, and **SO MANY MORE COMPANIES**. My live experience in 2019 was unforgetable. But seeing as the 2021 conference will also be 'broadcasted' from Chicago, I'm here to share with you the 2020 virtual experience
+In 2019, the live conference in Orlando Florida had 26,000 attendees. The conference has many features, including workshops, networking, mentorship, poster presentations, speakers from academic, government, and industry. The live conference has a massive Career Fair where recruiters and engineers amass from companies such as Apple, Facebook, Amazon, Google, JP Morgan, Morgan Stanley, Goldman Sachs, Slack, Home Depot, Microsoft, Salesforce, Stripe, Quora, and **SO MANY MORE COMPANIES**. Of course, there's swag and after parties. The GHC student _ticket_ was ~ $600 CAD, with airfare, food, accommodations on top. 
+
+I personally believe that one of the reasons why 2019 was an unforgetable experience was because it was live, in person. The experience and frustration with registration, walking from one end of the hall to the other with feet aching, attending Twitter's after-party or others hosted by companies, signing up for said after-parties or trying to figure out how to receive the exclusive invite to them, meeting fellow students on the bus or walking from hall to hall, meeting Amazon engineers at a Nike after-party, interviewing on site and being treated to lounge beverages, asking students "hey, which booth gave you that ice cream" (it was datto), standing in line for BlackRock's smoothies and learning that the person behind you is an engineer at Apple - these experiences cannot be replicated in the remote environment. 
+
+Seeing as the 2021 conference will also be _broadcasted_ from Chicago, I'm here to share with you the 2020 virtual experience. If you haven't got time, the TL;DR version is *if you are attending the virtual GHC for the Career Fair, save your money and skip it* A lot of other virtual conferences and opportunities come through as a result of the failure of GHC's Career Fair, and those are free to attend unlike GHC
 
 ---
 What is vGHC ? 
 ---
-vGHC is the virtual Grace Hopper Conference. In the year 2020, the conference, like everything else, was remote because of the COVID-19 pandemic. 
+vGHC is the virtual Grace Hopper Conference. In the year 2020, the conference, like everything else, was remote because of the COVID-19 pandemic. It took place from Sept 29 - Oct 3, 2020. 
 
-I personally believe that one of the reasons why 2019 was an unforgetable experience was because it was live, in person. The experience of frustration with registration, walking from one end of the hall to the other with feet aching, attending Twitter's after-party or others hosted by companies, signing up for said after-parties or trying to figure out how to receive the exclusive invite to them, meeting fellow students on the bus or walking from hall to hall, meeting Amazon engineers at a Nike after-party, interviewing on site and being treated to lounge beverages, asking students "hey, which booth gave you that ice cream" (it was datto), standing in line for BlackRock's smoothies and learning that the person behind you is an engineer at Apple, these experiences cannot be replicated in the remote environment. 
-
-Also, the cream of the conference, the Career Fair at GHC, was *cancelled* in 2020, mere days before the conference. This was the biggest disappointment from vGHC. 
+The biggest disappointment and shock from vGHC, for students and sponsor companies, was that a mere 3 days before the start of the conference, the Career Fair at GHC, was **CANCELLED** during the original conference dates in 2020. It left companies scrambling to make changes and provide a way to connect with students, whether it was through zoom or other platforms. Though the GHC Career Fair was rescheduled for a future date in November 2020, it was severly limited in capacity and the majority of vGHC attendees could not book a slot to chat with company recruiters. Keep in mind that the vGHC ticket was still $200 USD. 
 
 
 
 
 ---
-Fun fact, I learned how to create my technical portfolio at the virtual Grace Hopper Celebration
-2020!
+Resources 
+---
+
+These are some GHC resources I still have handy:
+- I learned how to create this technical portfolio at the virtual Grace Hopper Celebration 2020. Follow these steps to [make your own technical portfolio] (https://github.com/joatmon08/tech-portfolio)!
+- [interviewing tips from Avalara] (bit.ly/technical-whiteboard)
+- [AWS workshop] (https://github.com/uttarashekar/ghc_2020_aws_workshop)
