cleaned up the blog post

--- a/website/blog/2020-10-02-blog-post.md
+++ b/website/blog/2020-10-02-blog-post.md
@@ -2,18 +2,22 @@
 title: My vGHC 2020 experience
 ---
 
-I was fortunate to have the opportunity to attend the Grace Hopper Conference, thanks to funding provided by the Women in Computer Science (WiCS) program at Carleton University. I got to attend the 2019 confernece in person, and virtually attend in 2020. This gives me the opportunity to now compare the two experiences. 
+I was fortunate to attend the virtual Grace Hopper Conference in 2020, thanks to funding provided by the Women in Computer Science (WiCS) program at Carleton University. I had been able to attend the 2019 conference in person as well, so this gives me the opportunity to now compare the two experiences. 
 
 TL;DR
 ---
-*If you are attending the virtual GHC for the Career Fair, save your money and skip it* A lot of other virtual conferences and opportunities have come through as a result of the failure of GHC's Career Fair, and those are _FREE_ to attend _unlike GHC_
+*If you are attending the virtual GHC for the Career Fair, save your money and skip it*. A lot of other virtual conferences and opportunities have come through as a result of the **failure** of GHC's Career Fair, and those conferences are _FREE_ to attend _unlike GHC_
 
 What is GHC ?
 ---
 The [Grace Hopper Conference](https://ghc.anitab.org/) is an annual conference, and _the world's largest gathering of women in computing_
 
-In 2019, the live conference in Orlando Florida had 26,000 attendees. The conference has many features, including workshops, networking, mentorship, poster presentations, speakers from academic, government, and industry. The live conference has a massive Career Fair where recruiters and engineers amass from companies such as Apple, Facebook, Amazon, Google, JP Morgan, Morgan Stanley, Goldman Sachs, Slack, Home Depot, Microsoft, Salesforce, Stripe, Quora, and **SO MANY MORE COMPANIES**. Of course, there's swag and after parties. The GHC student _ticket_ was ~ $600 CAD, with airfare, food, accommodations on top. 
+In 2019, the live conference in Orlando Florida had 26,000 attendees. The conference has many features, including workshops, networking, mentorship, poster presentations, speakers from academic, government, and industry. The live conference has a massive Career Fair where recruiters and engineers amass from companies such as Apple, Facebook, Amazon, Google, JP Morgan, Morgan Stanley, Goldman Sachs, Slack, Home Depot, Microsoft, Salesforce, Stripe, Quora, and **SO MANY MORE COMPANIES**. Of course, there's swag and after parties. 
 
+###### Cost: the GHC student _ticket_ was ~ $500 USD($600 CAD), not including airfare, accommodations, or food. 
+
+GHC 2019 
+---
 I personally believe that one of the reasons why 2019 was an unforgetable experience was because it was live, in person. The experience and frustration with registration, walking from one end of the hall to the other with feet aching, attending Twitter's after-party or others hosted by companies, signing up for said after-parties or trying to figure out how to receive the exclusive invite to them, meeting fellow students on the bus or walking from hall to hall, meeting Amazon engineers at a Nike after-party, interviewing on site and being treated to lounge beverages, asking students "hey, which booth gave you that ice cream" (it was datto), standing in line for BlackRock's smoothies and learning that the person behind you is an engineer at Apple - these experiences cannot be replicated in the remote environment. 
 
 Seeing as the 2021 conference will also be _broadcasted_ from Chicago, I'm here to share with you the 2020 virtual experience. 
@@ -23,13 +27,15 @@ What is vGHC ?
 ---
 vGHC is the virtual Grace Hopper Conference. In the year 2020, the conference, like everything else, was remote because of the COVID-19 pandemic. It took place from Sept 29 - Oct 3, 2020. 
 
-The biggest disappointment and shock from vGHC, for students and sponsor companies, was that a mere 3 days before the start of the conference, the Career Fair at GHC, was **CANCELLED** during the original conference dates in 2020. It left companies scrambling to make changes and provide a way to connect with students, whether it was through zoom or other platforms. Though the GHC Career Fair was rescheduled for a future date in November 2020, it was severly limited in capacity and the majority of vGHC attendees could not book a slot to chat with company recruiters. Keep in mind that the vGHC ticket was still $200 USD. 
+The biggest disappointment and shock from vGHC, for students and sponsor companies, was that a mere 3 days before the start of the conference, the Career Fair at GHC, was **CANCELLED** during the original conference dates. It left companies scrambling to make changes and provide a way to connect with students, whether it was through Zoom or other platforms. Though the GHC Career Fair was rescheduled for a future date in November 2020, it was severly limited in capacity and the majority of vGHC attendees could not book a slot to chat with company recruiters. 
+
+##### Cost: the vGHC ticket was still $200 USD
 
 ---
 The Good
 ---
-- some of the GHC content was recorded and available for playback for a limited time frame after GHC attended
-- I loved the 'Deal or no deal: Negotiate your starting salary' by Kim Nguyen and Kasey Champion. I took away a lot of gems from there, and I connected with Kim post-GHC and she's been awesome!
+- some of the GHC content was recorded and available for playback for a limited time frame after GHC ended
+- I _**LOVED**_ the _'Deal or no deal: Negotiate your starting salary' by Kim Nguyen and Kasey Champion_. I took away a lot of gems from this straight up talk, and I connected with Kim post-GHC and she's been awesome!
 - I attended my first ever Open-Source Day (OSD) at GHC, and worked on an open source issue
 - I met a participant at GHC whom I worked with on the OSD issue, and we stayed connected post-GHC. Especially in this pandemic year, I appreciated meeting a GHC participant and working with her the whole day
 - networking on LinkedIn with people I met during OSD at GHC helped me learn about opportunities I can participate in, such as a meetup group that practises interview coding questions
@@ -39,11 +45,12 @@ The Bad
 ---
 - the login info for vGHC came on the morning of the conference (Tue Sept 29) when it was expected to come the day before (Mon Sept 28). This was on top of cancelling the Career Fair on Sat Sept 26
 - I couldn’t get into the OSD event I registered for; what’s the point of registering?
-- virtual networking in different workshops was really a Microsoft Excel sheet that collected everyone's LinkedIn contact info and resume submissions. I did not hear from anyone after but did have some random people add me on LinkedIn
+- virtual networking in different workshops was really a Microsoft Excel sheet that collected everyone's LinkedIn contact info and resume submissions. I did not hear from anyone officially (related to a company) but did have some random people add me on LinkedIn. BE CAREFUL who you share your LinkedIn contact with as well
 - during the lectures on the live stage and the workshops, there was **NO platform** on which you could interact with the speaker for Q/A. You couldn't interact with *anyone* during the session, even if you were having technical difficulties or wanted to contact someone from the AnitaB foundation. It was *frustrating* because it was literally like **you were watching TV or a YouTube talk, except that you paid $$$ for it** 
 - the limited Career Fair that was available was **very restricted** in its timings (couple of hours on some days). The live Career Fair in 2019 was a full day affair and you could walk around from booth to booth. In the virtual setting, you had to log in to different platforms, whether it was Zoom, a company specific platform, etc. It was utterly frustrating and disorganized
-- The workshops had a limit of 500 attendees when the conference has _30k attendees_. How does that even make sense where each student tix is **$200 USD ?!**
-- for vGHC, you had to preregister for the sessions you wanted to attend. This pre-registration was *USELESS* because it was a first-come-first-serve queue entry into the session, usually on Zoom. Only the first 500 got to enter, and there was no checking if someone had pre-registered or not
+- The workshops had a limit of 500 attendees when the conference has _30,000 attendees_. How does that even make sense given **the COST of a student ticket?!**
+- for vGHC, you had to preregister for the workshop sessions you wanted to attend. This pre-registration was *USELESS* because it was a first-come-first-serve queue entry into the session, usually on Zoom. Only the first 500 got to enter. Noone checked to see if you had pre-registered for the workshop you're attending. My parter with whom I worked on the OSD issue said she would log into the Zoom call _an HOUR_ before it started, just to hold her place for the virtual session. This means there is no guarantee for those who pre-register that they'll get into their session
+- if a workshop is full with 500 participants, you just have to keep clicking the Zoom link multiple times, hoping 1 person will leave and you'll get their spot to get in
 - the pre-registration allowed 1000 people to register for a session but Zoom capped participants at 500 people **(!!!)**
 - the workshops were not recorded, although the lectures were. There was no reason provided why one type of content could be recorded and available post-GHC for a couple of months, but another type of content would not be recorded for playback
 
