added 'workshop' to resources

--- a/website/blog/2020-10-02-blog-post.md
+++ b/website/blog/2020-10-02-blog-post.md
@@ -61,7 +61,7 @@ The Bad
 Resources 
 ---
 
-These are some GHC resources I still have handy:
+These are some GHC workshop resources I still have handy:
 - [Make your own technical portfolio](https://github.com/joatmon08/tech-portfolio)
 - [Interviewing tips from Avalara](bit.ly/technical-whiteboard)
 - [AWS workshop](https://github.com/uttarashekar/ghc_2020_aws_workshop)
